<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle_black_48dp"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/ic_payment_black_48dp"
            android:title="@string/nav_payment" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_black_48dp"
            android:title="@string/nav_history" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_48dp"
            android:title="@string/nav_settings" >
        </item>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_48dp"
            android:title="@string/nav_logout" />
    </group>

    <group>
        <item
            android:id="@+id/nav_about"
            android:title="@string/nav_about" >
        </item>
    </group>

</menu>
