<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<ListPreference-->
        <!--android:defaultValue="-1"-->
        <!--android:entries="@array/pref_example_list_titles"-->
        <!--android:entryValues="@array/pref_example_list_values"-->
        <!--android:key="example_list"-->
        <!--android:negativeButtonText="@null"-->
        <!--android:positiveButtonText="@null"-->
        <!--android:title="@string/pref_title_add_friends_to_messages" />-->

    <ListPreference
        android:key="pref_server"
        android:title="@string/pref_server"
        android:dialogTitle="@string/pref_server"
        android:entries="@array/pref_server_entries"
        android:entryValues="@array/pref_server_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <CheckBoxPreference
        android:key="pref_customApi"
        android:title="@string/pref_customApi"
        android:summary="@string/pref_customApi_summ"
        android:defaultValue="false" />

    <EditTextPreference
        android:key="pref_customApiUrl"
        android:dependency="pref_customApi"
        android:title="@string/custom_api_url_title"
        android:persistent="true"
        android:dialogTitle="@string/custom_api_url_message"
        android:defaultValue="@string/default_api_url" />

</PreferenceScreen>