<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    tools:context="com.waiter.CurrentWaitWaiterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/current_wait_info_layout"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" />

            <Button
                android:id="@+id/btn_wait_can_start"
                android:text="@string/wait_can_start"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_wait_finished"
                android:visibility="gone"
                android:text="@string/wait_finished"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_cancel_this_wait"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel_this_wait"
                android:textColor="@android:color/white"
                android:theme="@style/CancelButton" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>
