<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_view"
    android:background="@color/colorPrimary"
    tools:context="com.waiter.UpdatePasswordActivity">

    <ScrollView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scroll_view"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="32dp"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:text="@string/change_password"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <!-- Password Label -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_current_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:passwordToggleEnabled="true"
                app:errorTextAppearance="@style/error_appearance">
                <EditText
                    android:id="@+id/input_current_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/current_password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <!-- New password -->
            <com.waiter.custom.CustomTextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:passwordToggleEnabled="true"
                app:errorTextAppearance="@style/error_appearance"
                app:helperText="@string/password_instructions">
                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_password"
                    android:inputType="textPassword" />
            </com.waiter.custom.CustomTextInputLayout>

            <!-- Confirmation New Password Label -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password_confirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:errorTextAppearance="@style/error_appearance">
                <EditText
                    android:id="@+id/input_password_confirmation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_confirmation"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:textColor="@color/white"
                android:onClick="onClick_Update_Password"
                android:text="@string/update_password"
                android:theme="@style/AppTheme.Dark" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
