<?xml version="1.0" encoding="utf-8"?>
<agency.tango.materialintroscreen.parallax.ParallaxLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:id="@+id/scroll_view">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="54dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:paddingStart="5dp"
                    android:paddingLeft="5dp"
                    android:text="@string/when_your_birthday"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <!-- Birthday Label -->
                <com.waiter.custom.CustomTextInputLayout
                    android:id="@+id/input_layout_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:errorTextAppearance="@style/error_appearance"
                    app:helperText="@string/birthday_instructions">
                    <EditText
                        android:id="@+id/input_birthday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_birthday"
                        android:focusable="false"
                        android:longClickable="false"
                        android:inputType="date"
                        android:imeOptions="actionDone" />
                </com.waiter.custom.CustomTextInputLayout>

                <Button
                    android:id="@+id/signup_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_gravity="end"
                    android:textColor="@color/white"
                    android:text="@string/action_sign_up"
                    android:theme="@style/AppTheme.Dark" />

            </LinearLayout>

        </ScrollView>

        <TextView
            android:id="@+id/welcome_user"
            android:visibility="gone"
            android:drawableTop="@drawable/ic_account_circle_white_48dp"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hi_user_welcome"
            android:gravity="center_horizontal"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    </RelativeLayout>


</agency.tango.materialintroscreen.parallax.ParallaxLinearLayout>