<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.waiter.HistoryDetailActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/history_title"
        app:titleTextColor="@android:color/white"
        app:navigationIcon="@drawable/ic_arrow_back_white_24dp">

    </android.support.v7.widget.Toolbar>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/drag_view"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <LinearLayout
                android:id="@+id/current_wait_title_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/event_name"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_title"/>

                <TextView
                    android:id="@+id/event_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_address" />

            </LinearLayout>

        </RelativeLayout>

        <ImageView
            android:id="@+id/static_maps"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="#cacaca" />

        <!-- Start Price -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackground"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:alpha="0.36"
                android:src="@drawable/ic_attach_money_black_24dp"  />

            <TextView
                android:id="@+id/wait_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="@string/placeholder_price"
                android:textColor="@android:color/primary_text_light" />

        </LinearLayout>
        <!-- End Price -->

        <!-- Start Date -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackground"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:alpha="0.36"
                app:srcCompat="@drawable/ic_schedule_black_24dp" />

            <TextView
                android:id="@+id/wait_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="@string/last_update_on"
                android:textColor="@android:color/primary_text_light" />

        </LinearLayout>
        <!-- End Date -->

        <!-- Start Waiters -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackground"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:alpha="0.36"
                app:srcCompat="@drawable/ic_people_black_24dp" />

            <TextView
                android:id="@+id/waiters_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="@string/placeholder_waiters_state"
                android:textColor="@android:color/primary_text_light" />

        </LinearLayout>
        <!-- End Waiters -->

        <RatingBar
            android:id="@+id/ratingBar"
            android:stepSize="1"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_download_invoice"
            android:text="@string/download_invoice"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>
