<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:id="@+id/scroll_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="54dp"
            android:paddingLeft="@dimen/mi_baseline"
            android:paddingRight="@dimen/mi_baseline">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:text="@string/whats_your_name"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <!-- First name Label -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:errorTextAppearance="@style/error_appearance">
                <EditText
                    android:id="@+id/input_fname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_fname"
                    android:inputType="textPersonName|textCapWords" />
            </android.support.design.widget.TextInputLayout>

            <!-- Last name Label -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:errorTextAppearance="@style/error_appearance">
                <EditText
                    android:id="@+id/input_lname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_lname"
                    android:inputType="textPersonName|textCapWords"
                    android:imeOptions="actionDone" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>

</layout>